@@ -11,6 +11,7 @@ x.x:
 - fixed: pleio_api admin settings menu item not visible
 - fixed: access bug in analytics view
 - fixed: css/js caching issues
+- fixed: new users invited for an autojoin group are not a member of the group after registration
 - changed: invitation only sites can now have a register page but no link to it
 - changed: order of the access list from least to most access
 - changed: activity page title now matches document title
